--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     </div>
 
     <script src="gallery-items.js" type="module"></script>
-    <script src="exports.js" type="module"></script>
+    <script src="items.js" type="module"></script>
   </body>
 </html>
