--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       ></button>
     </div>
 
-    <script src="gallery-items.js" type="module"></script>
-    <script src="items.js" type="module"></script>
+    <script src="./gallery-items.js" type="module"></script>
+    <script src="./js/items.js" type="module"></script>
   </body>
 </html>
